# UTSMoped

./: .cproject  .directory  .project  .pydevproject  CMakeLists.txt  Mat2Quat.m  Matrix2Eular.m  Quat2Euler.m  Quat2Mat.m  ScottLH.m  ScottLHnm.m  cl1.bak.txt  cl1.txt  cl1.ver.txt  cmake_install.cmake  input_pose.m  mainpage.dox  manifest.xml  mediansvd.txt  plane.pcd  point.txt  pose.m  pose_inv.m  rigid_transform_3D.m  svd_input.txt  uts_moped.cpp
libmoped/: .directory  Makefile
libmoped/include/: moped.hpp  sXML.hpp
libmoped/libs/: .directory  Makefile
libmoped/libs/libicp/: demo.cpp
libmoped/src/: .directory  GLOBAL_DISPLAY.hpp  GLOBAL_DISPLAY_WU.hpp  STATUS_DISPLAY.hpp  WU_MODEL_PROCESS.hpp  WU_TEST.hpp  config.hpp  moped.cpp  util.hpp
libmoped/src/cluster/: CLUSTER_DISPLAY.hpp  CLUSTER_MEAN_SHIFT_CPU.hpp
libmoped/src/feat/: FEAT_DISPLAY.hpp  FEAT_SIFT_CPU.hpp
libmoped/src/filter/: DEPTH_VERIFICATION.hpp  FILTER_PROJECTION_CPU.hpp
libmoped/src/match/: MATCH_ANN_CPU.hpp  MATCH_DISPLAY.hpp
libmoped/src/pose/: POSE_DISPLAY.hpp  POSE_RANSAC_LM_DIFF_REPROJECTION_CPU.hpp
libmoped/src/util/: UTIL_UNDISTORT.hpp
libmoped/src/wu/: CLUSTER_DISPLAY_WU.hpp  CLUSTER_MEAN_SHIFT_CPU_WU.hpp  FEAT_SIFT_CPU_WU.hpp  LONGUET_HIGGINS_WU.hpp  MATCH_ANN_CPU_WU.hpp  NO_RANSAC_POSE_DEPTH_CPU_WU.hpp  PLANE_EXTRACTION.hpp  POSE_DEPTH_CPU_WU.hpp  POSE_DEPTH_CPU_WU.hpp.bak  VERTEX_COVER_GEO_WU.hpp  VERTEX_COVER_WU.hpp
models/: .directory  belvita_crunchy.afterAlign.moped.xml  chunky.afterAlign.moped.xml  guava.afterAlign.moped.xml  killrust.afterAlign.moped.xml  noodles_back.afterAlign.moped.xml  noodles_front.afterAlign.moped.xml  pringles.afterAlign.moped.xml
models.bak/: belvita_milk.afterAlign.moped.xml  grillmate.afterAlign.moped.xml  webcam.afterAlign.moped.xml
